Renamed customers to clients. Fixed a bug in CustomerintroducePart.vue where the items were not showing up due to a url check. Updarted NewsComponent and NewsCard.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -403,8 +403,8 @@ svg:not(:root).svg-inline--fa {
 }
 .hooper-indicator {
     margin: 0 6px;
-    width: 12px;
-    height: 12px;
+    width: 10px;
+    height: 10px;
     border-radius: 12px;
     border: none;
     padding: 0;
